# Blockwise-Coherent-Direction-Optimizer

./: ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.md  REPRODUCING.md  pyproject.toml
configs/: bcdo_cnn_probe.yaml  bcdo_cnn_reference_ablation.yaml  bcdo_cnn_reference_default.yaml  bcdo_cnn_reference_tuning.yaml  bcdo_cnn_tuning.yaml  bcdo_default.yaml  bcdo_gpu.yaml  bcdo_pinn_probe.yaml  bcdo_pinn_tuning.yaml  bcdo_tuning.yaml  block_direction_v42_ablation.yaml  block_direction_v42_default.yaml  block_direction_v42_tuning.yaml  block_direction_v4_fast_ablation.yaml  block_direction_v4_fast_cnn_probe.yaml  block_direction_v4_fast_cnn_tuning.yaml  block_direction_v4_fast_default.yaml  block_direction_v4_fast_gpu.yaml  block_direction_v4_fast_pinn_probe.yaml  block_direction_v4_fast_pinn_tuning.yaml  block_direction_v4_fast_tuning.yaml
docs/: CLAIM.md  CNN_REFERENCE.md  COMPARISONS.md  FAILURE_CASES.md  METHOD.md  V42_REFERENCE.md
examples/: basic_usage.py  bcdo_blockwise_direction_demo.py  bcdo_compare_against_adamw.py  bcdo_minimal_mlp.py
paper/: artifact_manifest.json  bcdo_claims_audit.md  bcdo_draft.md  bcdo_results_summary.csv  local_run_log.md
reports/: README.md  complete_system_inventory_and_results.md  repo_readiness_audit.md  repo_update_report.md
scripts/: export_bcdo_cnn_reference_report.py  export_bcdo_report.py  export_block_direction_v42_report.py  export_block_direction_v4_fast_report.py  run_bcdo_ablation.py  run_bcdo_benchmarks.py  run_bcdo_cnn_reference_ablation.py  run_bcdo_smoke.py  (+13 more)
(+121 files in other folders)
