[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "block-direction-optimizer"
version = "0.1.0"
description = "Blockwise Consensus Direction Optimizer research repository with blockwise direction-selection benchmarks and reproducibility tooling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Steven Reid" }]
license = { text = "Research Source-Available License" }
keywords = ["optimizer", "deep-learning", "pytorch", "blockwise-optimization", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["optimizers*", "optimizer_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
